--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 		document.getElementById('square').addEventListener('mouseout', function(){
 		    console.log(anMouse.getHorizontalAngel());
 		    console.log(anMouse.getHorizontalAngelDeg());
+		    console.log(anMouse.getSpeed());
 		})
 	</script>
 </body>
